--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fefb1479390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f95616b44d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fefb1b02e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fefb17a0590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f956136b250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f956136b490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fefb1d3cbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fefb1d43e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9561912b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9561912dd0&gt;]</pre>
 </div>
 
 </div>
