--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff354e69390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe16b78ae10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff354b7b3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff354b7b5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe16bd5b290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe16bd5b490&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff35511ec50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff35511ee50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe16c2fdb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe16c2fdd50&gt;]</pre>
 </div>
 
 </div>
