--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f098948da90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd130042650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0989168390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0989168590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd12fcf23d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd12fcf25d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0989728c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0989728e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1302ea310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd130299e50&gt;]</pre>
 </div>
 
 </div>
