--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2f1b956890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e706f8450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f1bd10490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f1bd106d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e70b14410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e70b14610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2f1c2b2d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2f1c2b2fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e710b7bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e710b7dd0&gt;]</pre>
 </div>
 
 </div>
