--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e706f8450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4427a53510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e70b14410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e70b14610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4426b64350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4426b64550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e710b7bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e710b7dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4427107c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4427107e90&gt;]</pre>
 </div>
 
 </div>
