--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0c46865090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad84a32b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0c46b7a510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0c46b7a710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad83a6e3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad83a6e610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0c4711fe50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0c4712b090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad84010c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad84010e90&gt;]</pre>
 </div>
 
 </div>
