--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f907acf6110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f51efa1fd10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f907b0b29d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f907b09a510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f51ef716490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f51ef716690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f907b63cbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f907b6ad290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f51efcbbd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f51efcbbf50&gt;]</pre>
 </div>
 
 </div>
