--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b48117e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54f0da1350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b47e13350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b47e13550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54f11c3390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54f11c3590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b483b5c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b483b5e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54f17c2c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54f176add0&gt;]</pre>
 </div>
 
 </div>
