--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e6a5aa950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c5ef05590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e6ab5f310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e6ab5f510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c5eea2610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c5eea2810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e6b105b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e6b105d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c5f462e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c5f462fd0&gt;]</pre>
 </div>
 
 </div>
