--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8f83b4ba10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f473829e350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f83b79450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8f83b79650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4738653410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4738653610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f8411fcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8f8411fed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4738bf9cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4738bf9ed0&gt;]</pre>
 </div>
 
 </div>
