--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff60cc5be90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f79e40d2c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff60d21f410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff60d21f610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79e440a3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79e440a5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff60d7c7b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff60d7c7d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f79e49b0c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f79e49b0e90&gt;]</pre>
 </div>
 
 </div>
