--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb119eb2390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0343fc5f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb11a2d7350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb11a2c6910&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03443cc490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03443cc690&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb11a8e7f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb11a872fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f034496fc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f034496fe90&gt;]</pre>
 </div>
 
 </div>
