--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5943a27c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ba25316d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5943d1b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5943d1b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ba16642d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1ba16644d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59442bdc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59442bde10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ba1c06b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1ba1c06d50&gt;]</pre>
 </div>
 
 </div>
