--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1449ec9450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff7722601d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f144a47d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f144a47d5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff77137e390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff77137e590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f144aa26c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f144aa26e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff771925c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff771925e10&gt;]</pre>
 </div>
 
 </div>
