--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0dfe8aa450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff4d767b450&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dfe585190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dfe58e410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4d76a15d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4d769a6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0dfeb29890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0dfeb30cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4d7cb5f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff4d7c4b0d0&gt;]</pre>
 </div>
 
 </div>
