--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46cca454d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5388863290&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46cd00e390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46cd00e550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5388e11050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5388e114d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46cd5b6c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46cd5b6e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53893bbcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53893bbed0&gt;]</pre>
 </div>
 
 </div>
