--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e08f221d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f195ed83e50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e094e8310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e094e8510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f195ea79450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f195ea79650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e09a8bbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e09a8bdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f195f020d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f195f020f10&gt;]</pre>
 </div>
 
 </div>
