--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ddc4a50d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f88f1b02bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ddc144290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ddc144490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f88f20d4610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88f20d4810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ddc6ebc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ddc6ebe10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f88f267ae90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f88f26850d0&gt;]</pre>
 </div>
 
 </div>
