--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4a5525c850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c5741ce90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a54f5b050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4a54f5b250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c570ee350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c570ee550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a5550c910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4a5550cb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c57691cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c57691ed0&gt;]</pre>
 </div>
 
 </div>
