--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f24d8f82390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d8787c950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f24d8c85350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f24d8c85550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d8754d410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d8754d610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f24d922dd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f24d922df10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d87af0cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4d87af0ed0&gt;]</pre>
 </div>
 
 </div>
