--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd001a33250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e55fdfdd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd000b55350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd000b55550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e5519f3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e5519f5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0010f7c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0010f7e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e55753c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e55753e50&gt;]</pre>
 </div>
 
 </div>
